fixes triangulation branches code